--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Freelancer - Start Bootstrap Theme</title>
+    <title>Scademi</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -51,7 +51,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">Login</a>
+                        <a href="../exam.html">Login</a>
+                    </li>
+                    <li class="page-scroll">
+                        <a href="#portfolio">PortFolio</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -215,7 +218,7 @@
                         <div class="row">
                             <div class="form-group col-xs-12">
                               <center>
-                                <button type="submit" class="btn btn-success btn-lg">Submit</button>
+                                <button type="submit" class="btn btn-success btn-lg">Register</button>
                               </center>
                             </div>
                         </div>
