--- a/public/score.html
+++ b/public/score.html
@@ -16,6 +16,7 @@
 
     <!-- Theme CSS -->
     <link href="css/freelancer.min.css" rel="stylesheet">
+    <link href="css/bebas.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -66,32 +67,25 @@
     </nav>
 
     <!-- Header -->
-    <header>
+    <header class="score">
       <center>
         <div class="container">
-          <h1>Final Score</h1>
+          <h1 class="">Your Score</h1>
             <div class="row">
-                  <div class="col-lg-12 text-center" >
-                      <div class="panel panel-default">
-                          <div class="panel-body">
-                          </div>
-                      </div>
+                  <div class="col-lg-12 text-center " >
+                    <div class="panel panel-default rows="10%" cols="50%"">
+                        <div class="panel-body">
+                            <p id="scorefinal" class="score">
+                              .col-lg-6
+                            </p>
+                        </div>
+                    </div>
                   </div>
+                  <p><a href="#" class="btn btn-primary btn-lg" role="button">Exit &raquo;</a>
+                  </p>
               </div>
                 </div>
-                <div class="jumbotron">
-                    <h1>Final Score</h1>
-                    <div class="row">
-                          <div class="col-lg-12 text-center" >
-                              <div class="panel panel-default">
-                                  <div class="panel-body">
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                    <p><a href="#" class="btn btn-primary btn-lg" role="button">Exit &raquo;</a>
-                    </p>
-                </div>
+
               </center>
             </div>
         </div>
